add user profile (#29)
GridAdmin can now display a list of profiles. We can:
- add or delete a profile
- edit a profile to define default LF parameters (this is a link on an existing element)
- edit a user to select or remove its profile

Signed-off-by: David BRAQUART <david.braquart@rte-france.com>